--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -37,7 +37,6 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
           cache: 'maven'
-
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -77,5 +76,5 @@ jobs:
           git config user.email github-actions@github.com
           git add .
           git commit -m "Update Dockerrun.aws.json docker image with new tag ${{ steps.build-number.outputs.BUILD_NUMBER }}"
+          git remote set-url origin git@github.com:joacobnd/spring-fullstack-project.git
           git push
-
