--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -76,5 +76,4 @@ jobs:
           git config user.email github-actions@github.com
           git add .
           git commit -m "Update Dockerrun.aws.json docker image with new tag ${{ steps.build-number.outputs.BUILD_NUMBER }}"
-          git remote set-url origin git@github.com:joacobnd/spring-fullstack-project.git
-          git push
+          git push https://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@github.com/joacobnd/spring-fullstack-project.git
