--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -72,8 +72,8 @@ jobs:
 
       - name: Commit and push Dockerrun.aws.json
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name joacobnd
+          git config user.email joacomda@gmail.com
           git add .
           git commit -m "Update Dockerrun.aws.json docker image with new tag ${{ steps.build-number.outputs.BUILD_NUMBER }}"
-          git push https://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@github.com/joacobnd/spring-fullstack-project.git
+          git push
