--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -76,4 +76,6 @@ jobs:
           git config user.email joacomda@gmail.com
           git add .
           git commit -m "Update Dockerrun.aws.json docker image with new tag ${{ steps.build-number.outputs.BUILD_NUMBER }}"
-          git push origin master
+          git config --global credential.helper store
+          git push https://joacobnd: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n@github.com/joacobnd/spring-fullstack-project.git 
+          git push
