--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -76,4 +76,4 @@ jobs:
           git config user.email joacomda@gmail.com
           git add .
           git commit -m "Update Dockerrun.aws.json docker image with new tag ${{ steps.build-number.outputs.BUILD_NUMBER }}"
-          git push https://joacobnd:!"Asdasdasd1@github.com/joacobnd/spring-fullstack-project.git --all
+          git push https://joacobnd:Asdasdasd123.-@github.com/joacobnd/spring-fullstack-project.git --all
