--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -72,9 +72,8 @@ jobs:
 
       - name: Commit and push Dockerrun.aws.json
         run: |
-          git config user.name joacobnd
+          git config user.name joaco
           git config user.email joacomda@gmail.com
-          git remote set-url origin https://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@github.com/joacobnd/spring-fullstack-project.git
           git add .
           git commit -m "Update Dockerrun.aws.json docker image with new tag ${{ steps.build-number.outputs.BUILD_NUMBER }}"
           git push 
