--- a/frontend/react/Dockerfile
+++ b/frontend/react/Dockerfile
@@ -1,8 +1,9 @@
-FROM --platform=linux/arm64 node:19-alpine
+FROM --platform=linux/arm64 --platform=linux/amd64 node:19-alpine
+ARG api_base_url
 WORKDIR /app
 COPY package*.json .
 RUN npm i --silent
 COPY . .
-RUN echo "VITE_API_BASE_URL=http://localhost:8088" > .env
+RUN echo "VITE_API_BASE_URL=${api_base_url}" > .env
 EXPOSE 5173
 CMD ["npm", "run", "dev"]
